--- a/client/app/modules/challengeSettings/templates/challengeSettings.tpl.html
+++ b/client/app/modules/challengeSettings/templates/challengeSettings.tpl.html
@@ -2,10 +2,10 @@
     <section>
         <ul class="nav nav-pills nav-justified">
             <li ui-route="/challenge/{{ challenge.accessUrl }}/settings/basic" ng-class="{active: $uiRoute}">
-                <a ui-sref="challengeSettings.basic">Basic</a>
+                <a ui-sref="challenge.settings.basic">Basic</a>
             </li>
             <li ui-route="/challenge/{{ challenge.accessUrl }}/settings/poster" ng-class="{active: $uiRoute}">
-                <a ui-sref="challengeSettings.poster">Poster</a>
+                <a ui-sref="challenge.settings.poster">Poster</a>
             </li>
         </ul>
     </section>
