--- a/client/app/modules/projectSetting/templates/projectSettings.tpl.html
+++ b/client/app/modules/projectSetting/templates/projectSettings.tpl.html
@@ -1,20 +1,20 @@
 <section class="row" style="margin : auto auto;">
     <section class="col-xs-12">
         <ul class="nav nav-tabs nav-justified">
-            <li ui-route="/project/{{ project.accessUrl }}/settings/basic" ng-class="{active: $uiRoute}">
-                <a ui-sref="projectSettings.basic">Basic</a>
-            </li>
-            <li ui-route="/project/{{ project.accessUrl }}/settings/poster" ng-class="{active: $uiRoute}">
-                <a ui-sref="projectSettings.poster">Poster</a>
-            </li>
+            <!--<li ui-route="/project/{{ project.accessUrl }}/settings/basic" ng-class="{active: $uiRoute}">-->
+                <!--<a ui-sref="project.settings.basic">Basic</a>-->
+            <!--</li>-->
+            <!--<li ui-route="/project/{{ project.accessUrl }}/settings/poster" ng-class="{active: $uiRoute}">-->
+                <!--<a ui-sref="project.settings.poster">Poster</a>-->
+            <!--</li>-->
             <li ui-route="/project/{{ project.accessUrl }}/settings/media" ng-class="{active: $uiRoute}">
-                <a ui-sref="projectSettings.media">Media</a>
+                <a ui-sref="project.settings.media">Media</a>
             </li>
             <li ui-route="/project/{{ project.accessUrl }}/settings/apply" ng-class="{active: $uiRoute}">
-                <a ui-sref="projectSettings.apply">Apply</a>
+                <a ui-sref="project.settings.apply">Apply</a>
             </li>
             <li ui-route="/project/{{ project.accessUrl }}/settings/team" ng-class="{active: $uiRoute}">
-                <a ui-sref="projectSettings.team">Team</a>
+                <a ui-sref="project.settings.team">Team</a>
             </li>
         </ul>
     </section>
