--- a/client/app/modules/user/templates/profile/relation.tpl.html
+++ b/client/app/modules/user/templates/profile/relation.tpl.html
@@ -28,3 +28,4 @@
         </ul>
     </div>
 </div>
+<div ng-include="'modules/user.templates/profile/recommandation.tpl.html'" ng-controller=""></div>
