--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -5,8 +5,8 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="center">
-                        <img ng-src="{{challenge.poster}}" ng-show="challenge.poster" class="img-rounded p" width="120px" style="height:120px">
-                        <img ng-src="images/avater.jpg" ng-hide="challenge.poster" class="img-rounded" width="120px" style="height:120px">
+                        <img ng-src="{{challenge.poster}}" ng-show="challenge.poster" class="img-rounded" width="80%">
+                        <img ng-src="images/avater.jpg" ng-hide="challenge.poster" class="img-rounded" width="80%">
                     </div>
                     <div class="clearfix">
                     </div>
@@ -15,9 +15,13 @@
                             {{challenge.title}}
                         </span>
                     </h2>
-                    <div ng-if="me">
-                        <a class="btn btn-primary btn-block" ng-if="!isFollow" tooltip="{{'CHALLENGE_VIEW_FOLLOW_INFO'|translate}}"  ng-click="followChallenge()">{{'CHALLENGE_VIEW_FOLLOW'|translate}}({{challenge.follow}}) </a>
-                        <a class="btn btn-warning btn-block" ng-if="isFollow" ng-click="unfollow(challenge.id)">{{'CHALLENGE_VIEW_UNFOLLOW'|translate}}</a>
+                    <div class="center solid pbm">
+                        <i class="fa fa-home fa-2x my-btn" ui-route="/challenge/{{ challenge.accessUrl }}/details" ng-class="{active: $uiRoute}" ui-sref="challenge.details({ pid : challenge.accessUrl })"></i>
+                        <i class="fa fa-cogs fa-2x my-btn" ui-route="/challenge/{{ challenge.accessUrl }}/settings/basic" ng-class="{active: $uiRoute}" ui-sref="challenge.settings.basic({ pid : challenge.accessUrl })" tooltip="challenge's administration" ng-if="project.isMember == 1 || user.id == project.owner"></i>
+                        <i class="fa fa-comments fa-2x my-btn" ui-route="/challenge/{{ challenge.accessUrl }}/forum" ng-class="{active: $uiRoute}" ui-sref="challenge.topic" tooltip="project's forum"  ng-if="project.isMember == 1 || user.id == project.owner"></i>
+                        <i class="fa fa-star-o fa-2x " ng-if="!isFollow && me" tooltip="follow this challenge"  ng-click="followChallenge()"tooltip="Follow this project" ></i>
+                        <i class="fa fa-2x fa-star "  ng-if="isFollow && me" ng-click="unfollow(challenge.id)" tooltip="Unfollow this challenge" ></i>
+                        <!--<i class="fa fa-2x fa-bullhorn my-btn" ng-click="openShare()" tooltip="Promote this challenge"></i>-->
                     </div>
                     <div class="solid center pbm ">
                         <h3>
@@ -41,7 +45,7 @@
                                 <small class="text-muted">
                                     created by
                                 </small>
-                                    <br><div owner-block="challenge.owner"></div>
+                                <span owner-block="challenge.owner"></span>
                             </span>
                         </h3>
                         <d3-tag-cloud tags="d3Tags" on-click="showTag(item)" options="{ width : 150, height:200 }"></d3-tag-cloud>
@@ -50,29 +54,6 @@
             </div>
         </div>
         <article class="col-md-9 col-sm-8 col-xs-12">
-            <h1 ng-bind="challenge.title" class="center"></h1>
-            <a ui-sref="challengeSettings.basic({ pid : challenge.accessUrl })" ng-show="isOwner" class="btn btn-default pull-right ">
-                <i class="fa fa-edit"></i>Edit
-            </a>
-            <ul class="nav nav-pills">
-                <li ui-route="/challenge/{{ challenge.accessUrl }}/list" ng-class="{active: $uiRoute}">
-                    <a ui-sref="challenge.list">List</a>
-                </li>
-                <li ui-route="/challenge/{{ challenge.accessUrl }}/details" ng-class="{active: $uiRoute}">
-                    <a ui-sref="challenge.details">Details</a>
-                </li>
-                <li ui-route="/challenge/{{ challenge.accessUrl }}/forum" ng-class="{active: $uiRoute}">
-                <a ui-sref="challenge.topic">Forum</a>
-                </li>
-                <li ui-route="/challenge/{{ challenge.accessUrl }}/followers" ng-class="{active: $uiRoute}">
-                    <a ui-sref="challenge.followers">followers</a>
-                </li>
-                <li ng-if="me" ui-route="/challenge/{{ challenge.accessUrl }}/projectCreation" ng-class="{active: $uiRoute}">
-                    <a ui-sref="challenge.projectCreation">Create New Project</a>
-                </li>
-            </ul>
-            <br>
-
             <div ui-view="challengeView">
             </div>
         </article>
