--- a/client/app/modules/project/templates/modal/projectShare.tpl.html
+++ b/client/app/modules/project/templates/modal/projectShare.tpl.html
@@ -7,7 +7,7 @@
 <div class="modal-body" >
     <div class="row">
         {{'PROJECT_VIEW_SHARE_INFO'|translate}}
-        <pre>http://202.116.100.131/challenge/{{ cid }}/{{ pid }}</pre>
+        <pre>http://ideaStorm.io/project/{{ pid }}</pre>
 </div>
 <div class="clearfix"></div>
 </div>
