--- a/client/app/modules/project/templates/projects.tpl.html
+++ b/client/app/modules/project/templates/projects.tpl.html
@@ -1,26 +1,50 @@
 <div class="container">
-    <div class="col-sm-6 col-md-4" ng-repeat="project in projects | orderBy:orderProp:true track by $index">
-        <div class="thumbnail" >
-            <a ui-sref="project({ pid : project.accessUrl })">
-                <img ng-src="{{project.poster}}" alt="..." class="img-rounded mbm" style="height:180px">
-                <div class="caption center">
-                    <h3>{{project.title}}</h3>
-                    <p ng-bind-html="project.brief" class="thumb-project-brief"></p>
-                    <div class="progress" >
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{project.score}}" aria-valuemin="0" aria-valuemax="100" style="width: {{project.score}}%" tooltip="靠谱度：{{project.score}}%">
-                            <span class="sr-only">{{project.score}}% Complete (success)</span>
-                        </div>
-                    </div>
-                    <p>
-                        <small style="color:#666">Last Updated：{{project.updateDate|timeago}}</small>
-                    </p>
-                    <p>
-                        <small style="color:#666">Founded on：{{project.createDate|date}} </small>
-                    </p>
-                </div>
-            </a>
+    <div class="row">
+        <div class="pull-right" >
+            <span ng-show="filterMode" class="filter-input edit-menu">
+                <input type="search"  ng-model="search.title"/>
+            </span>
+            <i class="fa fa-search fa-2x my-btn" tooltip="filter by title" ng-click="enableFilterMode()"></i>
+            <!--<i class="fa fa-plus fa-2x my-btn" tooltip="Suggest a challenge" ui-sref="challengeSuggest"  ng-if="isLogged"></i>-->
         </div>
     </div>
+    <ul class="media-list" >
+        <li class="media .edit-menu" ng-repeat="project in projects | filter:search track by $index">
+            <a ui-sref="project.details({ pid : project.accessUrl })" class="pull-left">
+                <img  ng-src="{{project.poster}}" ng-show="project.poster" class="media-object" style="height:180px;max-width: 100%">
+            </a>
+            <div class="media-body">
+                <h4 class="media-heading">
+                    <a ui-sref="project.details({ pid : project.accessUrl })">{{project.title}}</a>
+                </h4>
+                <p class="muted" style="height:130px;overflow:hidden;" ><small ng-bind-html="project.brief"></small></p>
+                <div showtags="" entity="project"></div>
+            </div>
+        </li>
+    </ul>
+
+    <!--<div class="col-sm-6 col-md-4" ng-repeat="project in projects | orderBy:orderProp:true track by $index">-->
+        <!--<div class="thumbnail" >-->
+            <!--<a ui-sref="project.details({ pid : project.accessUrl })">-->
+                <!--<img ng-src="{{project.poster}}" alt="..." class="img-rounded mbm" style="height:180px">-->
+                <!--<div class="caption center">-->
+                    <!--<h3>{{project.title}}</h3>-->
+                    <!--<p ng-bind-html="project.brief" class="thumb-project-brief"></p>-->
+                    <!--<div class="progress" >-->
+                        <!--<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{project.score}}" aria-valuemin="0" aria-valuemax="100" style="width: {{project.score}}%" tooltip="靠谱度：{{project.score}}%">-->
+                            <!--<span class="sr-only">{{project.score}}% Complete (success)</span>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<p>-->
+                        <!--<small style="color:#666">Last Updated：{{project.updateDate|timeago}}</small>-->
+                    <!--</p>-->
+                    <!--<p>-->
+                        <!--<small style="color:#666">Founded on：{{project.createDate|date}} </small>-->
+                    <!--</p>-->
+                <!--</div>-->
+            <!--</a>-->
+        <!--</div>-->
+    <!--</div>-->
     <button ng-show="projects.length>=4&&!isEnd" ng-click="loadMoreProjects(noPage)" class="btn  btn-default col-xs-12">Load more</button>
 </div>
 
