--- a/client/app/styles/less/animate.css
+++ b/client/app/styles/less/animate.css
@@ -6,6 +6,11 @@
   -webkit-animation: fadeOutLeft 0.5s;
   animation: fadeOutLeft 0.5s;
 }
+[ui-view="messageView"].ng-enter,
+[ui-view="profileView"].ng-enter {
+  -webkit-animation: fadeInDown 0.5s;
+  animation: fadeInDown 0.5s;
+}
 [ui-view="challengeView"].ng-enter {
   -webkit-animation: slideInRight 0.5s;
   animation: slideInRight 0.5s;
@@ -40,4 +45,15 @@
 .edit-menu.ng-enter {
   -webkit-animation: fadeInDown 0.5s;
   animation: fadeInDown 0.5s;
+}
+.filter-input input {
+  border-radius: 5px;
+}
+.filter-input.ng-enter {
+  -webkit-animation: rollIn 0.5s;
+  animation: rollIn 0.5s;
+}
+.filter-input.ng-leave {
+  -webkit-animation: flipOutX 0.5s;
+  animation: flipOutX 0.5s;
 }
