--- a/client/app/styles/less/common.css
+++ b/client/app/styles/less/common.css
@@ -1,3 +1,6 @@
+body {
+  font-family: 'Abel', sans-serif;
+}
 textarea {
   resize: none;
 }
@@ -6,8 +9,6 @@ textarea {
   height: 300px;
   border-radius: 500px;
   overflow: hidden;
-  position: absolute;
-  /* this breaks the overflow:hidden in Chrome/Opera */
   -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
 }
 .wrapper {
@@ -57,21 +58,27 @@ footer p {
 .my-btn {
   z-index: 20;
   cursor: pointer;
+  line-height: 40px;
+  text-align: center;
+  vertical-align: middle;
+  width: 40px;
+  display: inline-block;
+  height: 40px;
   -webkit-transition: -webkit-transform 0.1s;
   transition: transform 0.1s;
 }
-.my-btn.ng-enter {
-  -webkit-animation: fadeInDown 0.5s;
-  animation: fadeInDown 0.5s;
-}
 .my-btn:active {
-  transform: scale(1.5);
-  -webkit-transform: scale(1.5);
+  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
 }
 .my-btn.ng-leave {
   visibility: hidden;
 }
-.my-btnmy-btn-picture {
+.my-btn.active {
+  border: 1px solid black;
+  border-radius: 50%;
+}
+.my-btn.my-btn-picture {
   top: 10px;
   right: 10px;
 }
@@ -82,4 +89,7 @@ footer p {
   background-color: transparent;
   border: none;
   box-shadow: none;
+}
+.img-rounded {
+  border-radius: 50%;
 }
