--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -31,6 +31,11 @@
   -webkit-animation: fadeOutLeft 0.5s;
   animation: fadeOutLeft 0.5s;
 }
+[ui-view="messageView"].ng-enter,
+[ui-view="profileView"].ng-enter {
+  -webkit-animation: fadeInDown 0.5s;
+  animation: fadeInDown 0.5s;
+}
 [ui-view="challengeView"].ng-enter {
   -webkit-animation: slideInRight 0.5s;
   animation: slideInRight 0.5s;
@@ -65,6 +70,17 @@
 .edit-menu.ng-enter {
   -webkit-animation: fadeInDown 0.5s;
   animation: fadeInDown 0.5s;
+}
+.filter-input input {
+  border-radius: 5px;
+}
+.filter-input.ng-enter {
+  -webkit-animation: rollIn 0.5s;
+  animation: rollIn 0.5s;
+}
+.filter-input.ng-leave {
+  -webkit-animation: flipOutX 0.5s;
+  animation: flipOutX 0.5s;
 }
 .profile-map {
   width: 200px;
@@ -270,6 +286,9 @@
   -moz-border-radius: 20px;
   border-radius: 20px;
 }
+body {
+  font-family: 'Abel', sans-serif;
+}
 textarea {
   resize: none;
 }
@@ -278,8 +297,6 @@ textarea {
   height: 300px;
   border-radius: 500px;
   overflow: hidden;
-  position: absolute;
-  /* this breaks the overflow:hidden in Chrome/Opera */
   -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
 }
 .wrapper {
@@ -329,21 +346,27 @@ footer p {
 .my-btn {
   z-index: 20;
   cursor: pointer;
+  line-height: 40px;
+  text-align: center;
+  vertical-align: middle;
+  width: 40px;
+  display: inline-block;
+  height: 40px;
   -webkit-transition: -webkit-transform 0.1s;
   transition: transform 0.1s;
 }
-.my-btn.ng-enter {
-  -webkit-animation: fadeInDown 0.5s;
-  animation: fadeInDown 0.5s;
-}
 .my-btn:active {
-  transform: scale(1.5);
-  -webkit-transform: scale(1.5);
+  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
 }
 .my-btn.ng-leave {
   visibility: hidden;
 }
-.my-btnmy-btn-picture {
+.my-btn.active {
+  border: 1px solid black;
+  border-radius: 50%;
+}
+.my-btn.my-btn-picture {
   top: 10px;
   right: 10px;
 }
@@ -354,6 +377,9 @@ footer p {
   background-color: transparent;
   border: none;
   box-shadow: none;
+}
+.img-rounded {
+  border-radius: 50%;
 }
 /* general styles */
 html,
